--- a/microservices/lobby-service/package.json
+++ b/microservices/lobby-service/package.json
@@ -8,17 +8,21 @@
     "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["lobby", "matchmaking", "sports"],
+  "keywords": [
+    "lobby",
+    "matchmaking",
+    "sports"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
-    "dotenv": "^16.0.3",
     "amqplib": "^0.10.3",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.1.11"
   }
 }
