--- a/microservices/user-service/package.json
+++ b/microservices/user-service/package.json
@@ -7,15 +7,15 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
-    "jsonwebtoken": "^9.0.0",
     "argon2": "^0.44.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "pino": "^10.1.0",
-    "cors": "^2.8.5"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^8.0.3",
+    "pino": "^10.1.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^3.1.11"
   }
 }
