--- a/microservices/api-gateway/nginx.conf
+++ b/microservices/api-gateway/nginx.conf
@@ -7,6 +7,10 @@ http {
         server user-service:3001;
     }
 
+    upstream lobby_service {
+        server lobby-service:3002;
+    }
+
     server {
         listen 3000;
         server_name localhost;
@@ -29,6 +33,24 @@ http {
             proxy_set_header Connection "";
             
             # CORS headers
+            add_header Access-Control-Allow-Origin * always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
+            
+            if ($request_method = OPTIONS) {
+                return 204;
+            }
+        }
+
+        # Lobby Service
+        location /lobbies {
+            proxy_pass http://lobby_service;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
             add_header Access-Control-Allow-Origin * always;
             add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
             add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
