--- a/microservices/lobby-service/package.json
+++ b/microservices/lobby-service/package.json
@@ -1,28 +1,22 @@
 {
   "name": "lobby-service",
   "version": "1.0.0",
-  "description": "Lobby Service for Sports Matchmaking",
-  "main": "src/index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "lobby",
-    "matchmaking",
-    "sports"
-  ],
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "amqplib": "^0.10.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3"
+    "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.1.3",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "swagger-autogen": "^2.23.7"
   }
 }
