--- a/microservices/lobby-service/package.json
+++ b/microservices/lobby-service/package.json
@@ -1,22 +1,26 @@
 {
   "name": "lobby-service",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.2.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.1.3",
-    "swagger-ui-express": "^5.0.1"
+    "mongoose": "^8.0.3",
+    "pino": "^10.1.0",
+    "pino-http": "^10.3.0",
+    "pino-pretty": "^11.2.2"
   },
   "devDependencies": {
-    "swagger-autogen": "^2.23.7"
+    "nodemon": "^3.1.11"
   }
 }
