feat: changed the rating service to run on GraphQL - built the file structure to match a GraphQL service - edited docker compose and integrated the service in the nginx gateway - applied use case rules for the rating service, such as: "A: A User can only rate other users if they were in the same match (a match is a lobby that has the status FINISHED) in the last 72 hours; 	B: A User can only rate other users one time per user per match; 	C: The rating can part from two categories and two categories only: 		a) Like: (The user will then choose between Friendly, Communicative, Sporty, Fair) 		b) Dislike (The user will then choose between Toxic, Aggressive, Sloppy, Unfair) 	D: The user can only see the ratings he received, without information about the sender to keep anonymity."

--- a/microservices/api-gateway/nginx.conf
+++ b/microservices/api-gateway/nginx.conf
@@ -11,6 +11,10 @@ http {
         server lobby-service:3002;
     }
 
+    upstream rating_service {
+        server rating-service:3003;
+    }
+
     server {
         listen 3000;
         server_name localhost;
@@ -32,7 +36,6 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header Connection "";
             
-            # CORS headers
             add_header Access-Control-Allow-Origin * always;
             add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
             add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
@@ -53,6 +56,24 @@ http {
             
             add_header Access-Control-Allow-Origin * always;
             add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
+            
+            if ($request_method = OPTIONS) {
+                return 204;
+            }
+        }
+
+        # Rating Service (GraphQL)
+        location /graphql {
+            proxy_pass http://rating_service;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            add_header Access-Control-Allow-Origin * always;
+            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
             add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
             
             if ($request_method = OPTIONS) {
