--- a/microservices/rating-service/package.json
+++ b/microservices/rating-service/package.json
@@ -1,25 +1,33 @@
 {
   "name": "rating-service",
   "version": "1.0.0",
-  "description": "Rating Service for Sports Matchmaking",
+  "description": "Rating Service with GraphQL for Sports Matchmaking",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "rating",
     "matchmaking",
-    "sports"
+    "sports",
+    "graphql"
   ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "^4.9.5",
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^8.0.3"
+    "graphql": "^16.8.1",
+    "graphql-tag": "^2.12.6",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
+    "pino": "^10.1.0",
+    "pino-http": "^10.3.0",
+    "pino-pretty": "^11.2.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
