feat: Implemented the notifications service running on FastAPI + RabbitMQ 	- Python / FastAPI / RabbitMQ 	- The user now receives notifications every time a friend request is sent to him; every time another user joins his lobby 	- Updated the users and lobby services to support RabbitMQ publishing automatically when one of these actions is done 	- integrated in the docker compose as well as the api gateway
what's missing:
	- developing a better mock-up data seed that populates even better these services.

--- a/microservices/docker/docker-compose.yml
+++ b/microservices/docker/docker-compose.yml
@@ -1,4 +1,5 @@
 services:
+
   # API Gateway - NGINX
   api-gateway:
     build:
@@ -11,6 +12,7 @@ services:
       - user-service
       - lobby-service
       - rating-service
+      - notification-service
     networks:
       - sports-net
 
@@ -24,9 +26,11 @@ services:
       PORT: 3001
       MONGODB_URI: mongodb://root:root@mongo-user:27017/user-db?authSource=admin
       JWT_SECRET: your_jwt_secret_here_change_this_in_production
+      RABBITMQ_URL: amqp://guest:guest@rabbitmq:5672/
       LOG_LEVEL: info
     depends_on:
       - mongo-user
+      - rabbitmq
     networks:
       - sports-net
 
@@ -40,9 +44,11 @@ services:
       PORT: 3002
       MONGODB_URI: mongodb://root:root@mongo-lobby:27017/lobby-db?authSource=admin
       JWT_SECRET: your_jwt_secret_here_change_this_in_production
+      RABBITMQ_URL: amqp://guest:guest@rabbitmq:5672/
       LOG_LEVEL: info
     depends_on:
       - mongo-lobby
+      - rabbitmq
     networks:
       - sports-net
 
@@ -64,6 +70,27 @@ services:
     networks:
       - sports-net
 
+  # Notification Service
+  notification-service:
+    build:
+      context: ../notification-service
+      dockerfile: Dockerfile
+    container_name: notification-service
+    ports:
+      - "3004:3004"
+    environment:
+      PORT: 3004
+      MONGODB_URI: mongodb://root:root@mongo-notifications:27017/notifications-db?authSource=admin
+      RABBITMQ_URL: amqp://guest:guest@rabbitmq:5672/
+      JWT_SECRET: your_jwt_secret_here_change_this_in_production
+      LOG_LEVEL: info
+    depends_on:
+      - mongo-notifications
+      - rabbitmq
+    networks:
+      - sports-net
+    restart: unless-stopped
+  
   # MongoDB Databases
   mongo-user:
     image: mongo:7
@@ -98,12 +125,14 @@ services:
     networks:
       - sports-net
 
-  mongo-analytics:
+  mongo-notifications:
     image: mongo:7
-    container_name: mongo-analytics
+    container_name: mongo-notifications
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: root
+    ports:
+      - "27020:27017"
     networks:
       - sports-net
 
@@ -116,6 +145,31 @@ services:
       - "15672:15672"
     networks:
       - sports-net
+  
+  # Database Seeding
+  seed-data:
+    build:
+      context: ../seed-data
+      dockerfile: Dockerfile
+    container_name: seed-data
+    environment:
+      USER_SERVICE_URL: http://user-service:3001
+      LOBBY_SERVICE_URL: http://lobby-service:3002
+      RATING_SERVICE_URL: http://rating-service:3003
+      USER_MONGODB_URI: mongodb://root:root@mongo-user:27017/user-db?authSource=admin
+      LOBBY_MONGODB_URI: mongodb://root:root@mongo-lobby:27017/lobby-db?authSource=admin
+      RATING_MONGODB_URI: mongodb://root:root@mongo-rating:27017/rating-db?authSource=admin
+      JWT_SECRET: your_jwt_secret_here_change_this_in_production
+    depends_on:
+      user-service:
+        condition: service_started
+      lobby-service:
+        condition: service_started
+      rating-service:
+        condition: service_started
+    networks:
+      - sports-net
+    restart: "no"
 
 networks:
   sports-net:
