--- a/microservices/notification-service/Dockerfile
+++ b/microservices/notification-service/Dockerfile
@@ -1,13 +1,15 @@
-FROM node:18-alpine
+FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-RUN npm install
-
-COPY . .
+COPY app/ ./app/
 
 EXPOSE 3004
 
-CMD ["npm", "start"]
+HEALTHCHECK --interval=30s --timeout=5s --start-period=10s --retries=3 \
+    CMD python -c "import requests; requests.get('http://localhost:3004/health', timeout=5)"
+
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "3004"]
