--- a/microservices/lobby-service/package.json
+++ b/microservices/lobby-service/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^8.0.3",
     "pino": "^10.1.0",
     "pino-http": "^10.3.0",
-    "pino-pretty": "^11.2.2"
+    "pino-pretty": "^11.2.2",
+    "amqplib": "^0.10.9"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
