--- a/microservices/user-service/package.json
+++ b/microservices/user-service/package.json
@@ -17,7 +17,8 @@
     "pino": "^10.1.0",
     "pino-http": "^11.0.0",
     "pino-pretty": "^13.1.3",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "amqplib": "^0.10.9"
   },
   "devDependencies": {
     "nodemon": "^3.1.11",
