--- a/microservices/lobby-service/package.json
+++ b/microservices/lobby-service/package.json
@@ -19,7 +19,9 @@
     "pino": "^10.1.0",
     "pino-http": "^10.3.0",
     "pino-pretty": "^11.2.2",
-    "amqplib": "^0.10.9"
+    "amqplib": "^0.10.9",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
