--- a/microservices/notification-service/requirements.txt
+++ b/microservices/notification-service/requirements.txt
@@ -7,3 +7,5 @@ pydantic==2.5.0
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
 python-jose[cryptography]==3.3.0
+python-json-logger==2.0.7
+colorlog==6.8.0
