--- a/microservices/rating-service/package.json
+++ b/microservices/rating-service/package.json
@@ -27,7 +27,8 @@
     "mongoose": "^8.0.3",
     "pino": "^10.1.0",
     "pino-http": "^10.3.0",
-    "pino-pretty": "^11.2.2"
+    "pino-pretty": "^11.2.2",
+    "@graphql-tools/schema": "^10.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
