--- a/microservices/user-service/package.json
+++ b/microservices/user-service/package.json
@@ -17,6 +17,7 @@
     "pino": "^10.1.0",
     "pino-http": "^11.0.0",
     "pino-pretty": "^13.1.3",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "amqplib": "^0.10.9"
   },
