feat: Implementação do docker-compose-swarm

--- a/microservices/api-gateway/nginx.conf
+++ b/microservices/api-gateway/nginx.conf
@@ -3,107 +3,91 @@ events {
 }
 
 http {
-    upstream user_service {
-        server user-service:3001;
+    # Enable DNS resolution for Docker Swarm services
+    resolver 127.0.0.11 valid=10s ipv6=off;
+    resolver_timeout 5s;
+
+    # Define upstream variables (allows dynamic DNS resolution)
+    map $request_uri $user_service {
+        default "user-service:3001";
+    }
+    
+    map $request_uri $lobby_service {
+        default "lobby-service:3002";
+    }
+    
+    map $request_uri $rating_service {
+        default "rating-service:3003";
+    }
+    
+    map $request_uri $notification_service {
+        default "notification-service:3004";
     }
 
-    upstream lobby_service {
-        server lobby-service:3002;
-    }
+    # Logging
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log warn;
 
-    upstream rating_service {
-        server rating-service:3003;
-    }
-
-    upstream notification_service {
-        server notification-service:3004;
-    }
+    # Timeouts
+    proxy_connect_timeout 60s;
+    proxy_send_timeout 60s;
+    proxy_read_timeout 60s;
 
     server {
         listen 3000;
-        server_name localhost;
+        server_name _;
 
-        # Health check
+        # Health check endpoint
         location /health {
             access_log off;
-            return 200 "Gateway OK\n";
-            add_header Content-Type text/plain;
+            return 200 '{"status":"ok","service":"api-gateway"}';
+            add_header Content-Type application/json;
         }
 
-        # User Service
+        # User Service routes
         location /users {
-            proxy_pass http://user_service;
-            proxy_http_version 1.1;
+            set $upstream $user_service;
+            proxy_pass http://$upstream;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Connection "";
-            
-            add_header Access-Control-Allow-Origin * always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-            add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
-            
-            if ($request_method = OPTIONS) {
-                return 204;
-            }
         }
 
-        # Lobby Service
+        # Lobby Service routes
         location /lobbies {
-            proxy_pass http://lobby_service;
-            proxy_http_version 1.1;
+            set $upstream $lobby_service;
+            proxy_pass http://$upstream;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Connection "";
-            
-            add_header Access-Control-Allow-Origin * always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-            add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
-            
-            if ($request_method = OPTIONS) {
-                return 204;
-            }
         }
 
-        # Rating Service (GraphQL)
+        # Rating Service routes (GraphQL)
         location /graphql {
-            proxy_pass http://rating_service;
-            proxy_http_version 1.1;
+            set $upstream $rating_service;
+            proxy_pass http://$upstream;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Connection "";
-            
-            add_header Access-Control-Allow-Origin * always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-            add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
-            
-            if ($request_method = OPTIONS) {
-                return 204;
-            }
         }
 
-        # Notification Service
+        # Notification Service routes
         location /notifications {
-            proxy_pass http://notification_service;
-            proxy_http_version 1.1;
+            set $upstream $notification_service;
+            proxy_pass http://$upstream;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Connection "";
-            
-            add_header Access-Control-Allow-Origin * always;
-            add_header Access-Control-Allow-Methods "GET, POST, PATCH, DELETE, OPTIONS" always;
-            add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
-            
-            if ($request_method = OPTIONS) {
-                return 204;
-            }
+        }
+
+        # Default route
+        location / {
+            return 200 '{"message":"API Gateway","version":"1.0.0","endpoints":{"/users":"User Service","/lobbies":"Lobby Service","/graphql":"Rating Service","/notifications":"Notification Service"}}';
+            add_header Content-Type application/json;
         }
     }
 }
